--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,9 +1,16 @@
-name: Android Build
+name: Android Build - Final Attempt
 
 on:
-  push:
-    branches: [ main, master ]
   workflow_dispatch:
+    inputs:
+      build_type:
+        description: 'Build Type'
+        required: true
+        default: 'debug'
+        type: choice
+        options:
+          - debug
+          - release
 
 jobs:
   build:
@@ -27,53 +34,49 @@ jobs:
     - name: Make Gradle Executable
       run: chmod +x ./gradlew
       
-    - name: Validate Project Structure
+    - name: Create gradle wrapper if missing
       run: |
-        echo "Checking project structure..."
-        pwd
-        ls -la
-        echo "Checking app directory..."
-        if [ -d "app" ]; then
-          echo "App directory exists"
-          ls -la app/
-        else
-          echo "ERROR: App directory does not exist"
-          exit 1
-        fi
-        
-    - name: Check Gradle Wrapper
-      run: |
-        echo "Checking Gradle wrapper..."
-        if [ -f "gradlew" ]; then
-          echo "gradlew exists"
-        else
+        if [ ! -f "gradlew" ] || [ ! -f "gradle/wrapper/gradle-wrapper.jar" ]; then
           echo "Creating gradle wrapper..."
           ./gradlew wrapper --gradle-version 8.2
         fi
-        ls -la gradlew
+        
+    - name: Gradle Wrapper Properties
+      run: |
         cat gradle/wrapper/gradle-wrapper.properties
         
-    - name: Build Debug APK
+    - name: Check project structure
       run: |
-        echo "Starting build..."
-        ./gradlew --no-daemon assembleDebug --stacktrace
-        echo "Build completed"
+        echo "Project structure:"
+        find . -name "build.gradle*" -type f
+        echo "App module files:"
+        ls -la app/
+        echo "Source files:"
+        find app/src -name "*.kt" -o -name "*.java" | head -10
         
-    - name: Find APK Output
+    - name: Gradle Version
+      run: ./gradlew -v
+      
+    - name: Build APK
+      run: |
+        if [ "${{ github.event.inputs.build_type }}" == "release" ]; then
+          ./gradlew assembleRelease --no-daemon --stacktrace
+        else
+          ./gradlew assembleDebug --no-daemon --stacktrace
+        fi
+        
+    - name: Verify APK
       run: |
         echo "Looking for APK files..."
         find . -name "*.apk" -type f -exec ls -la {} \;
-        echo "Checking standard output locations..."
-        ls -la app/build/outputs/ 2>/dev/null || echo "Standard output path not found"
-        ls -la app/build/outputs/apk/ 2>/dev/null || echo "APK output path not found"
-        ls -la app/build/outputs/apk/debug/ 2>/dev/null || echo "Debug APK path not found"
+        echo "Checking standard locations..."
+        ls -la app/build/outputs/apk/debug/ 2>/dev/null || echo "Debug APK location not found"
+        ls -la app/build/outputs/apk/release/ 2>/dev/null || echo "Release APK location not found"
         
-    - name: Upload APK Artifact
+    - name: Upload APK
       uses: actions/upload-artifact@v4
-      if: always()
       with:
-        name: FoodAssistant-APK
+        name: FoodDecisionAssistant-APK
         path: |
-          app/build/outputs/apk/debug/app-debug.apk
-          **/*.apk
+          app/build/outputs/**/*.apk
         if-no-files-found: warn
