--- a/.github/workflows/simple-build.yml
+++ b/.github/workflows/simple-build.yml
@@ -21,18 +21,35 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
       
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v3
-      
-    - name: Generate Gradle Wrapper
+    - name: Download Gradle Wrapper
       run: |
-        # Generate wrapper files using system gradle
-        gradle wrapper --gradle-version 8.2
+        # Download official Gradle wrapper files
+        mkdir -p gradle/wrapper
+        
+        # Create gradle-wrapper.properties
+        cat > gradle/wrapper/gradle-wrapper.properties << 'EOF'
+        distributionBase=GRADLE_USER_HOME
+        distributionPath=wrapper/dists
+        distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-bin.zip
+        networkTimeout=10000
+        validateDistributionUrl=true
+        zipStoreBase=GRADLE_USER_HOME
+        zipStorePath=wrapper/dists
+        EOF
+        
+        # Download gradle-wrapper.jar
+        curl -L -o gradle/wrapper/gradle-wrapper.jar \
+          "https://raw.githubusercontent.com/gradle/gradle/v8.2.0/gradle/wrapper/gradle-wrapper.jar"
+        
+        # Create gradlew script
+        cat > gradlew << 'EOF'
+        #!/bin/sh
+        exec "$(dirname "$0")/gradle/wrapper/gradle-wrapper.jar" "$@"
+        EOF
+        
+        chmod +x gradlew
         ls -la gradle/wrapper/
         
-    - name: Make Gradle Executable
-      run: chmod +x ./gradlew
-      
     - name: Check project structure
       run: |
         echo "=== Project Root ==="
