--- a/.github/workflows/simple-build.yml
+++ b/.github/workflows/simple-build.yml
@@ -21,43 +21,15 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
       
-    - name: Download Gradle Wrapper
-      run: |
-        # Download official Gradle wrapper files
-        mkdir -p gradle/wrapper
-        
-        # Create gradle-wrapper.properties
-        cat > gradle/wrapper/gradle-wrapper.properties << 'EOF'
-        distributionBase=GRADLE_USER_HOME
-        distributionPath=wrapper/dists
-        distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-bin.zip
-        networkTimeout=10000
-        validateDistributionUrl=true
-        zipStoreBase=GRADLE_USER_HOME
-        zipStorePath=wrapper/dists
-        EOF
-        
-        # Download gradle-wrapper.jar
-        curl -L -o gradle/wrapper/gradle-wrapper.jar \
-          "https://raw.githubusercontent.com/gradle/gradle/v8.2.0/gradle/wrapper/gradle-wrapper.jar"
-        
-        # Download official gradlew script
-        curl -L -o gradlew \
-          "https://raw.githubusercontent.com/gradle/gradle/v8.2.0/gradlew"
-        
-        chmod +x gradlew
-        ls -la gradle/wrapper/
-        head -20 gradlew
-        
-    - name: Check project structure
-      run: |
-        echo "=== Project Root ==="
-        ls -la
-        
-    - name: Build Debug APK
-      run: |
-        echo "Building Debug APK..."
-        ./gradlew assembleDebug --no-daemon --stacktrace
+    - name: Validate Gradle Wrapper
+      uses: gradle/actions/wrapper-validation@v3
+      continue-on-error: true
+      
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: assembleDebug
+        gradle-version: 8.2
         
     - name: Verify APK Output
       run: |
